@@ -3,8 +3,6 @@ package com.atelier.sunny.models;
 import com.atelier.sunny.utils.DatabaseUtils;
 import org.bson.Document;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public final class GuildDocument {
@@ -12,11 +10,11 @@ public final class GuildDocument {
     private String guildName;
     private String channelID = null;
     // Making imageUrl as default is better
-    private List<String> imageUrl = Arrays.asList(new String[]{
+    private List<String> imageUrl = List.of(
             "https://cdn.discordapp.com/attachments/923148607157329961/935933903577960509/Atri-Genesus.png",
             "https://cdn.discordapp.com/attachments/923148607157329961/935931768832397392/unknown.png",
             "https://cdn.discordapp.com/attachments/923148607157329961/923148735465259008/1592906132.png"
-    });
+    );
 
     public List<String> getImageUrl() {
         return imageUrl;
@@ -70,8 +68,8 @@ public final class GuildDocument {
         if (doc == null) return null;
         return new GuildDocument()
                 .setImageUrl(doc.getList("imageUrl", String.class))
-                .setGuildId(doc.get("guildID", String.class))
-                .setGuildName(doc.get("guildName", String.class))
-                .setChannelID(doc.get("channelID", String.class));
+                .setGuildId(doc.getString("guildID"))
+                .setGuildName(doc.getString("guildName"))
+                .setChannelID(doc.getString("channelID"));
     }
 }
